# Doc-checker

./: .gitignore  README.md  config.yaml  pyproject.toml
output/: index.html
src/doc_checker/: cli.py  config.py  main.py  models.py  reporting.py
src/doc_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/doc_checker/execute_agent/: engine.py  xml_parser.py
src/doc_checker/llm/: deepseek.py
src/doc_checker/rule_agent/: __init__.py  extractor.py  pdf_parser.py  pipeline.py
tests/: test_smoke.py
