[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-checker"
version = "0.1.0"
description = "Rule DAG based technical document checker using DeepSeek API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.0",
  "PyMuPDF>=1.24.0",
  "typer>=0.12.0"
]

[project.scripts]
doc-checker = "doc_checker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
